# RaspberryPiAudio

./: CMakeLists.txt  README.md  test.cpp
config/: audio.conf
include/: Audio.h  common.h  configreader.h  fft_processor.h  recorder.h
src/: Audio.cpp  configreader.cpp  fft_processor.cpp  recorder.cpp
